<resources>
    <string name="app_name">AndroidFrameWork_koltin</string>
    <string name="data_f">response : %s</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--登录界面-->
    <string name="login">登录</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_input_username">请输入账号</string>
    <string name="are_you_sure_exit">是否要退出该账号?</string>
</resources>
