<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_login_k">
    <!--android:background="@color/white"-->
    <!--android:background="@drawable/bg_login_bg"-->
    <ImageView
        android:id="@+id/iv_icon_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@mipmap/icon_k_fuwu" />

    <LinearLayout
        android:id="@+id/ll_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/iv_icon_logo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CommonTextViewDarkMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_username"
            style="@style/CommonTextViewDarkMiddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@null"
            android:hint="@string/please_input_username"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/common_text_gray_thin" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_passwprd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_user"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.v7.widget.AppCompatTextView
            style="@style/CommonTextViewDarkMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_password"
            style="@style/CommonTextViewDarkMiddle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
            android:gravity="center_vertical"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/common_text_gray_thin" />

        <CheckBox
            android:id="@+id/cb_pwd_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:button="@drawable/select_password_isvisible"
            android:checked="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_remeber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_passwprd"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <CheckBox
            android:id="@+id/cb_remember_account"
            style="@style/CommonTextViewDarkMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@drawable/selector_cb_login_remember"
            android:paddingLeft="@dimen/marge_size_5"
            android:text="记住账户" />

        <CheckBox
            android:id="@+id/cb_remember_password"
            style="@style/CommonTextViewDarkMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_cb_login_remember"
            android:paddingLeft="@dimen/marge_size_5"
            android:text="记住密码" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/ll_remeber"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_orange_btn"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/common_text_size_middle" />

    <TextView
        android:id="@+id/tv_forget_pwd"
        style="@style/CommonTextViewDarkSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/btn_login"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="20dp"
        android:text="忘记密码？" />
    <!--bg_login_bottom.png-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/bg_login_bottom"
        android:visibility="gone" />
</RelativeLayout>
